--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       width: 100vw;
       height: 100vh;
       overflow: hidden;
-      background: #251a18;
+      background: #200103; /* deep deep red */
     }
     #grid {
       display: grid;
@@ -97,8 +97,8 @@
       cell.style.boxShadow = `${xCell.toFixed(1)}px ${yCell.toFixed(1)}px ${blurCell.toFixed(1)}px rgba(0,0,0,0.32)`;
 
       // --- Random scale and rotation for paper pile effect ---
-      const scale = 0.985 + Math.random() * (1.015 - 0.985); // 98.5% to 101.5%
-      const rot = (Math.random() - 0.5) * 2; // -1 to +1 deg
+      const scale = 0.97 + Math.random() * (1.03 - 0.97); // 97% to 103%
+      const rot = (Math.random() - 0.5) * 4; // -2 to +2 deg
       cell.style.transform = `scale(${scale.toFixed(4)}) rotate(${rot.toFixed(3)}deg)`;
 
       // SVG for the rounded quadrilateral
@@ -108,10 +108,10 @@
       svg.setAttribute('height', '100%');
       svg.setAttribute('viewBox', '0 0 100 100');
 
-      // --- Random drop shadow for the quad (SVG filter, tighter) ---
-      const xQuad = (Math.random() - 0.5) * 6; // -3 to 3 px
-      const yQuad = (Math.random() - 0.5) * 6;
-      const blurQuad = 2 + Math.random() * 6; // 2-8 px
+      // --- Tighter drop shadow for the quad (SVG filter, max 5px) ---
+      const xQuad = (Math.random() - 0.5) * 5; // -2.5 to 2.5 px
+      const yQuad = (Math.random() - 0.5) * 5; // -2.5 to 2.5 px
+      const blurQuad = 1 + Math.random() * 4; // 1-5 px
       const filterId = `fshadow${i}`;
       const filter = document.createElementNS("http://www.w3.org/2000/svg", "filter");
       filter.setAttribute("id", filterId);
