--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       height: 100vh;
       overflow: hidden;
       background: #200103; /* deep deep red */
+      mix-blend-mode: hard-light;
     }
     #grid {
       display: grid;
