--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       border-style: solid;
       transition: border-color 0.3s;
       background-blend-mode: multiply;
+mix-blend-mode: overlay;
       background-size: 220% 220%;
     }
     .quad {
